--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -5,8 +5,9 @@
   <package id="CronExpressionDescriptor" version="1.21.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EPPlus" version="4.1.0" targetFramework="net452" />
-  <package id="ImageResizer" version="4.0.5" targetFramework="net452" />
-  <package id="ImageResizer.Plugins.PrettyGifs" version="4.0.5" targetFramework="net452" />
+  <package id="ImageProcessor" version="2.5.6" targetFramework="net452" />
+  <package id="ImageProcessor.Plugins.WebP" version="1.0.6" targetFramework="net452" />
+  <package id="Imazen.WebP" version="9.0.1" targetFramework="net452" />
   <package id="LumenWorksCsvReader" version="3.9.1" targetFramework="net452" />
   <package id="MaxMind.GeoIP" version="2.1.17" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
