--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -77,7 +77,7 @@
     <customErrors mode="RemoteOnly" />
     <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" fcnMode="Single" />
     <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="250" batch="true" optimizeCompilations="true"> 
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -176,6 +176,7 @@
       <remove fileExtension=".otf" />
       <remove fileExtension=".json" />
       <remove fileExtension=".less" />
+      <remove fileExtension=".webp" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/octet-stream" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
@@ -183,6 +184,7 @@
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".less" mimeType="text/css" />
+      <mimeMap fileExtension=".webp" mimeType="image/webp" />
     </staticContent>
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
