(Perf) added MainPictureId property to Product entity

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -530,6 +530,10 @@
     <Compile Include="Migrations\201710252016556_IndexOptionNames.Designer.cs">
       <DependentUpon>201710252016556_IndexOptionNames.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711112331162_ProductMainPictureId.cs" />
+    <Compile Include="Migrations\201711112331162_ProductMainPictureId.Designer.cs">
+      <DependentUpon>201711112331162_ProductMainPictureId.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -961,6 +965,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710252016556_IndexOptionNames.resx">
       <DependentUpon>201710252016556_IndexOptionNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711112331162_ProductMainPictureId.resx">
+      <DependentUpon>201711112331162_ProductMainPictureId.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
