--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -58,6 +58,11 @@
       Please consider that this path or URL must point internally to the storage folder specified in "sm:MediaStoragePath"
     -->
     <add key="sm:MediaPublicPath" value="" />
+    <!-- 
+      Instructs the media middleware to stream remote files instead of redirecting them.
+      This setting only takes effect when any cloud media storage provider - like e.g. Azure BLOB - is active.
+    -->
+    <add key="sm:StreamRemoteMedia" value="true" />
     <add key="sm:BizImportMediaDirectory" value="Uploaded/static" />
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.Redis, SmartStore.Azure, Srt.ErpConnector" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
