--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -90,14 +90,6 @@
       <HintPath>..\..\packages\ImageProcessor.2.5.6\lib\net45\ImageProcessor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ImageProcessor.Plugins.WebP, Version=1.0.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ImageProcessor.Plugins.WebP.1.0.6\lib\net45\ImageProcessor.Plugins.WebP.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Imazen.WebP, Version=9.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Imazen.WebP.9.0.1\lib\net45\Imazen.WebP.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="LumenWorks.Framework.IO, Version=3.9.1.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344, processorArchitecture=MSIL">
       <HintPath>..\..\packages\LumenWorksCsvReader.3.9.1\lib\net20\LumenWorks.Framework.IO.dll</HintPath>
       <Private>True</Private>
@@ -271,9 +263,9 @@
     <Compile Include="Localization\LocalizedUrlHelper.cs" />
     <Compile Include="Logging\DbLogService.cs" />
     <Compile Include="Logging\ILogService.cs" />
-    <Compile Include="Media\Internal\ImagePostProcessor.cs" />
-    <Compile Include="Media\Internal\ImagePostProcessorBootstrapper.cs" />
+    <Compile Include="Media\Events.cs" />
     <Compile Include="Media\MediaFileSystem.cs" />
+    <Compile Include="Media\ProcessImageException.cs" />
     <Compile Include="Media\ProcessImageQuery.cs" />
     <Compile Include="Media\ProcessImageResult.cs" />
     <Compile Include="Media\Storage\DatabaseMediaStorageProvider.cs" />
@@ -634,7 +626,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <EmbeddedResource Include="Media\Resources\Native\x86\png.cmd" />
     <None Include="Web References\EuropaCheckVatService\checkVatService.wsdl">
       <SubType>Designer</SubType>
     </None>
@@ -661,16 +652,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Seo\Hooks\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Media\Resources\Native\README.txt" />
-    <EmbeddedResource Include="Media\Resources\Native\x64\gifsicle.exe" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\cjpeg.exe" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\gifsicle.exe" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\jpegtran.exe" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\libjpeg-62.dll" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\pngquant.exe" />
-    <EmbeddedResource Include="Media\Resources\Native\x86\TruePNG.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
