New action filter attributes LoadSetting & SaveSetting: helps to reduce the repetitive code bloat in all setting configuration actions.

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -240,6 +240,8 @@
     <Compile Include="Localization\SetWorkingCultureAttribute.cs" />
     <Compile Include="Modelling\Results\JsonNetResult.cs" />
     <Compile Include="Plugins\PluginRazorHost.cs" />
+    <Compile Include="Settings\SaveSettingAttribute.cs" />
+    <Compile Include="Settings\LoadSettingAttribute.cs" />
     <Compile Include="Theming\AdminThemedAttribute.cs" />
     <Compile Include="Filters\HandleExceptionFilter.cs" />
     <Compile Include="Filters\NotifyAttribute.cs" />
