Refactored/removed redundant code (Load/SaveSetting & MiniMapper)

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Collections\TreeNodeBase.cs" />
     <Compile Include="ComponentModel\MiniMapper.cs" />
     <Compile Include="ComponentModel\TypeConversion\BooleanConverter.cs" />
+    <Compile Include="ComponentModel\TypeConversion\DictionaryConverter.cs" />
     <Compile Include="ComponentModel\TypeConversion\EnumerableConverter.cs" />
     <Compile Include="ComponentModel\TypeConversion\NullableConverter.cs" />
     <Compile Include="ComponentModel\TypeConversion\ProductBundleDataConverter.cs" />
