Various fixes & enhancements

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -182,6 +182,7 @@
       <remove fileExtension=".json" />
       <remove fileExtension=".less" />
       <remove fileExtension=".webp" />
+      <remove fileExtension=".js" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/octet-stream" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
@@ -190,6 +191,7 @@
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".less" mimeType="text/css" />
       <mimeMap fileExtension=".webp" mimeType="image/webp" />
+      <mimeMap fileExtension=".js" mimeType="text/javascript" />
     </staticContent>
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
