Disabled legacy routes mapping by default

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -37,7 +37,7 @@
     <add key="sm:EnableVbViews" value="false" />
     <add key="sm:EnableViewLocationCacheDuringDebug" value="true" />
     <add key="sm:ShowCustomErrors" value="true" />
-    <add key="sm:EnableLegacyRoutesMapping" value="true" />
+    <add key="sm:EnableLegacyRoutesMapping" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <add key="sm:TranslateCheckUrl" value="http://translate.smartstore.com/StringResource/CheckAvailableResources?version={0}" />
     <!--
