Store URL resolution: takes SSL configuration into account and builds either secure or unsecure URL

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -46,23 +46,23 @@
         - "Media" or "/Media" points to the subfolder named "Media" in your application root
         - "F:\SharedMedia" points to a (mapped network) drive
         - "\\Server1\SharedMedia" points to a network drive.
-      Leave empty if path should be "/Media/Default".
+      Leave empty if path should be "App_Data/Tenants/{Tenant}/Media".
       In web farms, you should specify the same UNC or mapped network drive on each server.
     -->
     <add key="sm:MediaStoragePath" value="" />
-    <!-- 
-      Public base path to the media storage used to generate URLs for output HTML. 
-      Leave empty if "sm:MediaStoragePath" is an app local relative path, OR:
-        - specify a virtual path, like "~/Media", or
-        - specify a fully qualified URL, like "http://static.myshop.com/media"
-      Please consider that this path or URL must point internally to the storage folder specified in "sm:MediaStoragePath"
-    -->
-    <add key="sm:MediaPublicPath" value="" />
     <!-- 
       Instructs the media middleware to stream remote files instead of redirecting them.
       This setting only takes effect when any cloud media storage provider - like e.g. Azure BLOB - is active.
     -->
     <add key="sm:StreamRemoteMedia" value="true" />
+    <!-- 
+      Public base path to the media storage used to generate URLs for output HTML. 
+      Leave empty if "sm:MediaStoragePath" is an app local relative path and sm:StreamRemoteMedia is false, OR:
+        - specify a virtual path, like "~/Media", or
+        - specify a fully qualified URL, like "http://static.myshop.com/media"
+      Please consider that this path or URL must point internally to the storage folder specified in "sm:MediaStoragePath"
+    -->
+    <add key="sm:MediaPublicPath" value="" />
     <add key="sm:BizImportMediaDirectory" value="Uploaded/static" />
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.Redis, SmartStore.Azure, Srt.ErpConnector" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
