Targeting .NET Framework 4.6.1 (work in progress)

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -3,14 +3,14 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="bundleTransformer"> 
+    <sectionGroup name="bundleTransformer">
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
       <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
       <section name="autoprefixer" type="BundleTransformer.Autoprefixer.Configuration.AutoprefixerSettings, BundleTransformer.Autoprefixer" />
       <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
       <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
     </sectionGroup>
-  </configSections> 
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -83,7 +83,7 @@
     <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
     <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" fcnMode="Single" />
-    <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="252" batch="true" optimizeCompilations="true"> 
+    <compilation debug="true" targetFramework="4.6.1" numRecompilesBeforeAppRestart="253" batch="true" optimizeCompilations="true">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -167,7 +167,7 @@
       <remove name="ScssAssetHandler" />
       <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Theming.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
       <add name="SassAssetHandler" path="*.sass" verb="GET" type="SmartStore.Web.Framework.Theming.SassCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
-      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="SmartStore.Web.Framework.Theming.SassCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />     
+      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="SmartStore.Web.Framework.Theming.SassCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
       <!-- WebApi -->
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
@@ -332,7 +332,6 @@
         <bindingRedirect oldVersion="0.0.0.0-0.6.1.0" newVersion="0.6.1.0" />
       </dependentAssembly>
     </assemblyBinding>
-    
   </runtime>
   <connectionStrings configSource="Config\ConnectionStrings.config" />
   <system.data>
@@ -348,11 +347,10 @@
       <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
     </providers>
   </entityFramework>
-
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
-        <translators>  
+        <translators>
           <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
           <add name="LessTranslator" type="SmartStore.Web.Framework.Theming.Assets.LessTranslator, SmartStore.Web.Framework" />
           <add name="SassTranslator" type="SmartStore.Web.Framework.Theming.Assets.SassTranslator, SmartStore.Web.Framework" enabled="true" />
@@ -381,8 +379,8 @@
           <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
         </minifiers>
         <fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
       </js>
       <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
     </core>
@@ -393,7 +391,7 @@
     <sassAndScss useNativeMinification="true" indentType="Space" indentWidth="2" lineFeedType="CrLf" precision="5" sourceComments="false" />
     <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
       <browsers>
-        <add conditionalExpression="&gt; 1%" /> 
+        <add conditionalExpression="&gt; 1%" />
         <add conditionalExpression="last 2 versions" />
         <add conditionalExpression="Firefox ESR" />
         <add conditionalExpression="not ie &lt;= 9" />
@@ -408,8 +406,8 @@
   </bundleTransformer>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:latest /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
 </configuration>
